--- a/Readme
+++ b/Readme
@@ -2,3 +2,4 @@ You can download our dataset from
 
 链接: https://pan.baidu.com/s/13GhGhLujIYZgc0X78t4FVg?pwd=fuec 提取码: fuec 
 
+The current dataset only includes the drone detection part. The complete dataset will be uploaded within one month.
